<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SectionActivity">

    <TextView
        android:id="@+id/section_title"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Select The Class Section"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="353dp"
        android:layout_height="162dp"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_title"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mrui" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.186"
        app:layout_goneMarginTop="25dp">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"

            android:background="@color/Gray_Light"
            android:text="@string/label_1"
            android:textColor="@color/Gray"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@color/Gray_Light"
            android:text="@string/label_2"
            android:textColor="@color/Gray"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@color/Gray_Light"
            android:text="@string/label_3"
            android:textColor="@color/Gray"
            android:textSize="14sp" />
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_syllabus"
        style="@style/ButtonGreen"
        android:layout_width="330dp"
        android:layout_height="wrap_content"

        android:text="VIEW SYLLABUS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintBottom_toTopOf="@id/btn_timetable"
        app:layout_constraintVertical_bias="0.796" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_timetable"
        style="@style/ButtonGreen"
        android:layout_width="330dp"
        android:layout_height="wrap_content"

        android:text="VIEW TIMETABLE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.796" />

</androidx.constraintlayout.widget.ConstraintLayout>